fix monaco layout bug

--- a/src/pages/mock-operate/index.less
+++ b/src/pages/mock-operate/index.less
@@ -5,3 +5,22 @@
     margin-right: 0;
   }
 }
+.operate-form{
+  .monaco-tabs {
+    height: 100%;
+    overflow: hidden;
+    .ant-tabs-bar{
+      height: 45px;
+    }
+    .ant-tabs-content{
+      position: absolute;
+      top: 60px;
+      bottom: 0;
+      overflow: hidden;
+    }
+    .monaco-pane{
+      height: 100%;
+      overflow: hidden;
+    }
+  }
+}
